# quiz_mat

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: linter.yaml
quiz_mat/apps/accounts/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  validators.py  views.py
quiz_mat/apps/accounts/migrations/: 0001_initial.py  0002_remove_user_asaas_customer_id_remove_user_cpf_cnpj.py
quiz_mat/apps/accounts/templates/accounts/: signin.html  signup.html
quiz_mat/apps/quiz/: admin.py  forms.py  models.py  urls.py  views.py
quiz_mat/apps/quiz/migrations/: 0001_initial.py  0002_exercise_uuid.py  0003_remove_exercise_uuid.py
quiz_mat/apps/quiz/templates/quiz/: add_exercise.html  answer_exercise.html  home.html
quiz_mat/apps/theme/static_src/: tailwind.config.js
quiz_mat/apps/theme/static_src/src/: styles.css
quiz_mat/core/: asgi.py  env_settings.py  settings.py  urls.py
quiz_mat/templates/: base.html
quiz_mat/templates/components/: form.html  form_field.html  navbar.html
quiz_mat/utils/: models.py
